--- a/resources/assets/sass/1-tools/_vars.sass
+++ b/resources/assets/sass/1-tools/_vars.sass
@@ -50,5 +50,6 @@ $icon-font-path: "../fonts/bootstrap/"
 $de-header-color: #212121
 $de-background-color: #303030
 $de-foreground-color: #424242
+$de-editor-color: #272822
 $de-border-color: #181a1f
 $de-border-color-light: lighten($de-border-color, 4%)
