--- a/resources/assets/sass/3-modules/_footer.sass
+++ b/resources/assets/sass/3-modules/_footer.sass
@@ -6,5 +6,12 @@
   display: flex
   flex-flow: row nowrap
 
+  .footer-block-left
+    span
+      margin-right: 16px
+
   .footer-block-right
     margin-left: auto
+
+    span
+      margin-left: 16px
